Fix answer bubble menu covering warning links on hover only show temperature ambiguity warning once, and change its message

--- a/src/css/worksheet.less
+++ b/src/css/worksheet.less
@@ -452,6 +452,14 @@ div.sc_element_container {
               background-color: #e7e7e7;
               div.pulldown { display: block; }
             }
+            &.warn {
+              &:hover {
+                div.pulldown { display: none; }
+              }
+              & > table > tbody > tr:hover {
+                div.pulldown { display: block; }
+              }
+            }
             & > div, div.answer {
               float: right;
             }
